# cpp_tutorial

./: CMakeLists.txt  Makefile  cpp.pptx
include/: vector_math.h
src/: main.cpp  vector_helpers.cpp  vector_math.cpp
